--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@300&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
@@ -11,9 +11,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Andrew Ogle's web development portfolio"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -29,7 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://kit.fontawesome.com/0a217a1e9d.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>Andrew Ogle</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
