--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-  
+
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@300&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Andrew Ogle's web development portfolio"
     />
-    
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +32,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/0a217a1e9d.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0a217a1e9d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Andrew Ogle</title>
   </head>
   <body>
